# TMotorCANControl

./: .gitignore  MIT_DataLogger.py  MIT_ListenerTest.py  MIT_oscillate.py  MIT_shutoffMotor.py  README.md  TControl.py  TMotorInterface.py  TMotorManager.py  Tmotor.py  baud_rate_detector.py  csv_data.csv  derive_torque_constants.py  dummyLog  endCAN.sh  errorLog.txt  log.csv  log_adc_and_motor.csv  oscillate.py  outLog.txt  plot_log.py  requirements.txt  setup.cfg  setup.py  shutoffMotor_MIT.py  startCAN.sh  test.py
TMotorCANControl.egg-info/: PKG-INFO  SOURCES.txt
demos/mit_can/: check_motor_connection_mit.py  check_motor_connection_mit_can.py  demo_current_chirp_mit.py  demo_current_chirp_mit_can.py  demo_current_step_mit.py  demo_feature_cycle_mit.py  demo_full_state_feedback_mit.py  demo_full_state_feedback_mit_can.py  demo_idle_mit.py  demo_idle_mit_can.py  demo_position_step_mit.py  demo_position_step_mit_can.py  demo_position_tracking_mit.py  demo_position_tracking_mit_can.py  demo_speed_mit.py  demo_speed_mit_can.py  demo_torque_mit.py  demo_torque_mit_can.py  demo_two_DOF.py  demo_two_DOF_mit.py
demos/servo_can/: check_motor_connection_servo_can.py  demo_2DOF_servo_can.py  demo_PD_current_can.py  demo_PD_duty_can.py  demo_current_chirp_servo_can.py  demo_current_step_servo_can.py  demo_duty_step_servo_can.py  demo_idle_servo_can.py  demo_position_servo_can.py  demo_position_step_servo_can.py  demo_position_tracking_servo_can.py  demo_velocity_servo_can.py  log.csv
demos/servo_serial/: check_motor_connection_servo_serial.py  demo_2DOF_serial.py  demo_PD_current_serial.py  demo_PD_current_servo_serial.py  demo_PD_duty_serial.py  demo_PD_duty_servo_serial.py  demo_current_chirp_servo_can.py  demo_current_serial.py  demo_current_step_servo_serial.py  demo_duty_serial.py  demo_idle_serial.py  demo_idle_servo_serial.py  demo_position_serial.py  demo_position_step_servo_serial.py  demo_position_tracking_servo_serial.py  demo_set_position.py  demo_velocity_serial.py  demo_velocity_servo_serial.py
docs/source/: TMotorCANControl.mit_can.rst  TMotorCANControl.servo_can.rst  TMotorCANControl.servo_serial.rst  conf.py  demos.rst  index.rst  modules.rst
old/: ListenerTest.py  TControl.py  log.csv
src/TMotorCANControl/: CAN_Manager.py  CAN_Manager_mit.py  CAN_manager_servo.py  Serial_manager_servo.py  TMotorManager.py  TMotorManager_mit_can.py  TMotorManager_servo.py  TMotorManager_servo_can.py  TMotorManager_servo_serial.py  __init__.py  derive_torque_constants.py  dummyLog  log.csv  (+6 more)
src/TMotorCANControl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: log.csv  test_2_DOF.py  test_current_chirp.py  test_current_step.py  test_mit_poscon.py  test_motor_connection.py  test_position_step.py  test_position_wraparound.py  test_torque_step.py  test_torque_step_motorside.py
(+398 files in other folders)
