[metadata]
name = TMotorCANControl
version = 1.1.2
author = Mitry Anderson
author_email = mitryand@umich.edu
description = A package to manage AK series T Motors over CAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neurobionics/TMotorCANControl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
install_requires=
    numpy
    NeuroLocoMiddleware
    python-can
    
[options.packages.find]

# [options]
# package_dir =
#     = src
# packages = find:
# python_requires = >=3.8

# [options.packages.find]
# where = src