[metadata]
name = TMotorCANControl
version = 1.1.9
author = Mitry Anderson
author_email = mitryand@umich.edu
description = A package to manage AK series T Motors over CAN
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neurobionics/TMotorCANControl
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
install_requires=
    numpy
    NeuroLocoMiddleware
    python-can>=4.0.0
python_requires = >=3.7
package_dir=
    =src
packages=find:
# include_package_data = True
# package_data=TMotorCANControl=demos/*
# exclude_package_data = 
#     TMotorCANControl = test/*,
#     TMotorCANControl = plots/*,
#     TMotorCANControl = startup-scripts/*


[options.packages.find]
where=src

# package_dir =
#     = 
#     src
    
# [options.packages.find]

# [options]
# package_dir =
#   = src
# packages = find:


# [options.packages.find]
# exclude =
#     test
#     test.*
#     startup-scripts.*
#     plots.*
    